--- a/app/views/15-0/setup.html
+++ b/app/views/15-0/setup.html
@@ -1,8 +1,11 @@
 {% set _account = myData.accounts[myData.account] %}
 
 {% set _empAccount = myData.accounts[myData.emp] %}
+{% set _proAccount = myData.accounts[myData.pro] %}
 {% set _empAccountName = _empAccount.name %}
 {% set _proAccountName = myData.accounts[myData.pro].name %}
+{% set _empResCount = _empAccount.reservations.length %}
+{% set _proResCount = _proAccount.reservations.length %}
 
 {% extends "layout.html" %}
 
@@ -78,7 +81,7 @@
                     <option {% if myData.count == '10' %}selected{% endif %} value="10">10</option>
                     <option {% if myData.count == '25' %}selected{% endif %} value="25" data-preload="pro">25</option>
                     <option {% if myData.count == '100' %}selected{% endif %} value="100" data-preload="pro">100</option>
-                    <option {% if myData.count == '999999' %}selected{% endif %} value="999999">All available</option>
+                    <option {% if myData.count == '999999' %}selected{% endif %} value="999999" id="resTotalCount" >All available</option>
                 </select>
             </div>
 
@@ -97,13 +100,21 @@
 
             <!-- Employer limit (pro) -->
             <div class="govuk-form-group" style="margin-bottom: 10px" id="empLimit">
-                <div class="govuk-checkboxes">
-                <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="setupEmpLimit" name="setupEmpLimit" type="checkbox" value="setupEmpLimit" data-option="setupEmpLimit" {% if myData.emplimit == "true" %}checked{% endif %}>
-                    <label class="govuk-label govuk-checkboxes__label" for="setupEmpLimit">
-                        Employer reached limit
-                    </label>
-                </div>
+                <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="setupEmpLimit" name="setupEmpLimit" type="checkbox" value="setupEmpLimit" data-option="setupEmpLimit" {% if myData.emplimit == "true" %}checked{% endif %} data-aria-controls="conditional-setupEmpLimit">
+                        <label class="govuk-label govuk-checkboxes__label" for="setupEmpLimit">
+                            Employer reached limit
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-setupEmpLimit">
+                        <div class="govuk-form-group">
+                            <label class="govuk-label" for="setupEmpLimitNumber">
+                            After adding how many reservations?
+                            </label>
+                            <input class="govuk-input govuk-!-width-one-third" id="setupEmpLimitNumber" name="setupEmpLimitNumber" data-option="setupEmpLimitNumber" type="number" spellcheck="false" value="2">
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -186,6 +197,130 @@
     </div> -->
 </div>
 
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <h2 class="govuk-heading-m">Full page list</h2>
+
+        <table class="govuk-table">
+            <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header"></th>
+                <th scope="col" class="govuk-table__header">Employer</th>
+                <th scope="col" class="govuk-table__header">Provider</th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">  
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Home</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="employer-home">/employer-home</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="provider-home">/provider-home</a></td>
+                </tr> 
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Manage reservations</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-reservations?t=emp">/reserve-reservations?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-reservations-pro">/reserve-reservations-pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Start</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-start?t=emp">/reserve-start?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-start?t=pro">/reserve-start?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Choose org/employer</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-org?t=emp">/reserve-choose-org?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-org-pro">/reserve-choose-org-pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Confirm employer</th>
+                    <td class="govuk-table__cell" >-</td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-confirm-org">/reserve-confirm-org</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Choose course</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-course?t=emp">/reserve-choose-course?t=emp</a></td>
+                    <td class="govuk-table__cell">-</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Choose start date</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-start-date?t=emp">/reserve-choose-start-date?t=emp</a></td>
+                    <td class="govuk-table__cell" >-</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Choose course & start date</th>
+                    <td class="govuk-table__cell" >-</td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-training">/reserve-choose-training</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Check answers</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-check-answers">/reserve-check-answers</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-check-answers-pro">/reserve-check-answers-pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Confirmation</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-confirmation">/reserve-confirmation</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-confirmation-pro">/reserve-confirmation-pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Delete</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-delete?t=emp">/reserve-delete?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-delete?t=pro">/reserve-delete?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Delete - confirmation</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-delete-confirmation?t=emp">/reserve-delete-confirmation?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-delete-confirmation?t=pro">/reserve-delete-confirmation?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell" colspan="3"><h2 class="govuk-heading-m" style="margin-top:20px">Spend controls</h2></th>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Upcoming change</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-upcoming?t=emp">/reserve-upcoming?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-upcoming?t=pro">/reserve-upcoming?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Employer limit reached</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-limit-reached?t=emp">/reserve-limit-reached?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-limit-reached?t=pro">/reserve-limit-reached?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Funding paused</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-funding-paused?t=emp" >/reserve-funding-paused?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-funding-paused?t=pro" >/reserve-funding-paused?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell" colspan="3"><h2 class="govuk-heading-m" style="margin-top:20px">Errors</h2></th>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">No permission</th>
+                    <td class="govuk-table__cell" >-</td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-no-permission?t=pro" >/reserve-no-permission?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Non EOI</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-non-eoi?t=emp" >/reserve-non-eoi?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-non-eoi?t=pro">/reserve-non-eoi?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">403</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-403?t=emp" >/reserve-403?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-403?t=pro" >/reserve-403?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">404</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-404?t=emp" >/reserve-404?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-404?t=pro" >/reserve-404?t=pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">500</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-500?t=emp" >/reserve-500?t=emp</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-500?t=pro" >/reserve-500?t=pro</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
 <!-- <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <p class="govuk-body" >{{myData.generatedReservations|dump|safe}}</p>
@@ -203,7 +338,11 @@
             _options = $("[data-option]"),
             _entity = $("#entity"),
             _limit = $("#limit"),
-            _empLimit = $("#empLimit")
+            _empLimit = $("#empLimit"),
+            _resTotalCount = $("#resTotalCount")
+
+        console.log(_resTotalCount)
+        _resTotalCount.text("test")
 
         _options.change(function(){
             setValues()
@@ -220,12 +359,14 @@
                 _entity.show()
                 _limit.show()
                 _empLimit.hide()
+                _resTotalCount.text("All available (" + {{_empResCount|dump|safe}} + ")")
                 $("[data-preload]").hide()
                 $("[data-pro-components]").hide()
             } else {
                 _entity.hide()
                 _limit.hide()
                 _empLimit.show()
+                _resTotalCount.text("All available (" + {{_proResCount|dump|safe}} + ")")
                 $("[data-preload]").show()
                 $("[data-pro-components]").show()
             }
@@ -249,7 +390,7 @@
                 _urlCount = "&c=" + _options.filter("#setupCount").val(),
                 _urlLimit = "&l=" + _options.filter("#setupLimit").val(),
 
-                _urlEmpLimit = (_options.filter("#setupEmpLimit").is(":checked")) ? ("&el=10") : ("&el=no"),
+                _urlEmpLimit = (_options.filter("#setupEmpLimit").is(":checked")) ? ("&el=" + _options.filter("#setupEmpLimitNumber").val()) : ("&el=no"),
                 _urlUpcoming = (_options.filter("#setupUpcoming").is(":checked")) ? ("&up=true") : ("&up=false"),
 
                 _urlPaging = (_options.filter("#setupPaging").is(":checked")) ? ("&c_pg=true") : ("&c_pg=false"),
