15-0 funding paused config

--- a/app/views/14-0/setup.html
+++ b/app/views/14-0/setup.html
@@ -172,22 +172,22 @@
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Confirm employer</th>
-                    <td class="govuk-table__cell" >-</td>
+                    <td class="govuk-table__cell"  style="color:grey">n/a</td>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-confirm-org">/reserve-confirm-org</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Choose course</th>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-course?type=emp">/reserve-choose-course?type=emp</a></td>
-                    <td class="govuk-table__cell">-</td>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Choose start date</th>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-start-date?type=emp">/reserve-choose-start-date?type=emp</a></td>
-                    <td class="govuk-table__cell" >-</td>
+                    <td class="govuk-table__cell"  style="color:grey">n/a</td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Choose course & start date</th>
-                    <td class="govuk-table__cell" >-</td>
+                    <td class="govuk-table__cell"  style="color:grey">n/a</td>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-training">/reserve-choose-training</a></td>
                 </tr>
                 <tr class="govuk-table__row">
@@ -233,7 +233,7 @@
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">No permission</th>
-                    <td class="govuk-table__cell" >-</td>
+                    <td class="govuk-table__cell"  style="color:grey">n/a</td>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-no-permission?type=pro" >/reserve-no-permission?type=pro</a></td>
                 </tr>
                 <tr class="govuk-table__row">
