--- a/app/views/15-0/provider-home.html
+++ b/app/views/15-0/provider-home.html
@@ -2,8 +2,10 @@
 {% set _currentPage = 'provider-home' %}
 
 {% set _reserveStartURL = "reserve-start" %}
-{% if myData.upcoming != "false" %}
-  {% set _reserveStartURL = "reserve-upcoming" %}
+{% if myData.paused != "false" %}
+    {% set _reserveStartURL = "reserve-funding-paused" %}
+{% elif myData.upcoming != "false" %}
+    {% set _reserveStartURL = "reserve-upcoming" %}
 {% endif %}
 
 {% extends "layout-as-pro.html" %}
