--- a/app/views/15-0/reserve-reservations-pro.html
+++ b/app/views/15-0/reserve-reservations-pro.html
@@ -25,8 +25,10 @@
 {% endif %}
 
 {% set _reserveStartURL = "reserve-start" %}
-{% if myData.upcoming != "false" %}
-  {% set _reserveStartURL = "reserve-upcoming" %}
+{% if myData.paused != "false" %}
+    {% set _reserveStartURL = "reserve-funding-paused" %}
+{% elif myData.upcoming != "false" %}
+    {% set _reserveStartURL = "reserve-upcoming" %}
 {% endif %}
 
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
