--- a/app/views/15-0/reserve-choose-start-date.html
+++ b/app/views/15-0/reserve-choose-start-date.html
@@ -60,15 +60,32 @@
                     {% endif %}
                     <div class="govuk-radios" id="whichStartDateAnswer">
                         {% set _index = 1 %}
+                        {% set _show = true %}
+                        {% set _hiddenSet = false %}
                         {% for startDate in myData.startDates %}
                             {% if startDate.empmvs == true %}
-                            <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="whichStartDate-{{_index}}" name="whichStartDateAnswer" type="radio" value="{{startDate.id}}" {% if myData.whichStartDateAnswerTemp == startDate.id %}checked{% endif %}>
-                                <label class="govuk-label govuk-radios__label" for="whichStartDate-{{_index}}">
-                                    {{startDate.name}}
-                                </label>
-                            </div>
-                            {% set _index = _index + 1 %}
+
+                                {% if myData.hidedates == "no" or myData.reservationsadded < myData.hidedates %}
+                                    {% set _show = true %}
+                                {% else %}
+                                    {% if _hiddenSet == false %}
+                                        {% set _show = false %}
+                                        {% set _hiddenSet = true %}
+                                    {% else %}
+                                        {% set _show = true %}
+                                    {% endif %}
+                                {% endif %}
+
+                                {% if _show == true %}
+                                <div class="govuk-radios__item">
+                                    <input class="govuk-radios__input" id="whichStartDate-{{_index}}" name="whichStartDateAnswer" type="radio" value="{{startDate.id}}" {% if myData.whichStartDateAnswerTemp == startDate.id %}checked{% endif %}>
+                                    <label class="govuk-label govuk-radios__label" for="whichStartDate-{{_index}}">
+                                        {{startDate.name}}
+                                    </label>
+                                </div>
+                                {% set _index = _index + 1 %}
+                                {% endif %}
+
                             {% endif %}
                         {% endfor %}
                     </div>
