--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,14 +12,24 @@ Reserve funding prototype
       Reserve funding prototype
     </h1>
 
-    <ul class="govuk-list govuk-list--bullet">
-      <li><a href="/15-0/setup">Version 15</a>
-        <ul class="govuk-list govuk-list--bullet" style="color:red">
-          <li>things changed listed here for now...</li>
+    <ul class="govuk-list govuk-list--bullet govuk-body-l">
+      <li><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>
+        <ul class="govuk-list govuk-list--bullet">
+          <li style="margin-bottom: 0px">Providers: 
+            <ul class="govuk-list govuk-list--bullet">
+                <li style="margin-bottom: 0px">Manage: search, pagination and filters, table layout, ordering, content</li>
+            </ul>
+          <li style="margin-bottom: 0px">Employers
+            <ul class="govuk-list govuk-list--bullet">
+                <li style="margin-bottom: 0px">Choose course: yes/no choice</li>
+                <li style="margin-bottom: 0px">Choose org: skip page if 1</li>
+                <li style="margin-bottom: 0px">Dropout - dont know course: new page</li>
+            </ul>
+          </li>
         </ul>
       </li>
-      <li><a href="/14-0/setup">Version 14</a> (replicated MVS on 18/09/19)</li>
-      <li><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/">Versions 1 - 13</a></li>
+      <li><a href="/14-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 14</a> (MVS - September 2019)</li>
+      <li><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Versions 1 - 13</a></li>
     </ul>
   </div>
 </div>
