--- a/app/views/15-0/setup.html
+++ b/app/views/15-0/setup.html
@@ -189,7 +189,7 @@
                 <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="setupFilters" name="setupFilters" type="checkbox" value="setupFilters" data-option="setupFilters" {% if myData.filters == "true" %}checked{% endif %}>
                     <label class="govuk-label govuk-checkboxes__label" for="setupFilters">
-                    Filters
+                    Filters (not functioning)
                     </label>
                 </div>
                 </div>
@@ -201,7 +201,7 @@
                 <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="setupPaging" name="setupPaging" type="checkbox" value="setupPaging" data-option="setupPaging" {% if myData.paging == "true" %}checked{% endif %}>
                     <label class="govuk-label govuk-checkboxes__label" for="setupPaging">
-                    Paging
+                    Paging (not functioning)
                     </label>
                 </div>
                 </div>
